increase server test coverage with additional test scenarios